core_game/src/main/jj/parser.jj
PARSER_BEGIN(MyParser)
package edu.curtin.saed.assignment2;

import java.util.ArrayList;
import java.util.List;

public class MyParser
{
}
PARSER_END(MyParser)

SKIP: { " " | "\n" | "\r" | "\t" }

TOKEN: {
    < OBSTACLE: "obstacle" >
    | < COLLECTABLE: "item" >
    | < AT: "at" >
    | < MESSAGE: "message" >
    | < SIZE: "size" >
    | < START: "start" >
    | < GOAL: "goal" >
    | < PLUGIN: "plugin" >
    | < REQUIRES: "requires" >
    | < STRING: "\"" (~["\"", "\n", "\r"])* "\"" > // Any charcter except newlines surrounded by '"'
    | < IDENTIFIER: (["a"-"z","A"-"Z","_"])(["a"-"z","A"-"Z","0"-"9","_","."])* >
    | < COORDINATE: "(" (["0"-"9"])+ "," (["0"-"9"])+ ")" >

}

void run(Simulation sim, Loader loader) :
{}
{
    readMapSize(sim) // Do this first
    ( readPlayer(sim) | readGoal(sim) | readObstacles(sim) | readCollectables(sim) | readPlugin(loader) )*
}

void readMapSize(Simulation sim) :
{}
{
    <SIZE>
    <COORDINATE>
    {
        // Parse the coordinate to get h and w
        String coord = token.image.replaceAll("[()]", "");
        String[] xy = coord.split(",");
        int h = Integer.parseInt(xy[0]);
        int w = Integer.parseInt(xy[1]);

        sim.createMap(h, w);
    }
}

void readPlayer(Simulation sim) :
{}
{
    <START>
    <COORDINATE>
    {
        // Parse the coordinate to get x and y
        String coord = token.image.replaceAll("[()]", "");
        String[] xy = coord.split(",");
        int x = Integer.parseInt(xy[0]);
        int y = Integer.parseInt(xy[1]);

        // Set the player's starting position in the simulation
        sim.addPlayer(x, y);
    }
}

void readGoal(Simulation sim) :
{}
{
    <GOAL>
    <COORDINATE>
    {
        // Parse the coordinate to get x and y
        String coord = token.image.replaceAll("[()]", "");
        String[] xy = coord.split(",");
        int x = Integer.parseInt(xy[0]);
        int y = Integer.parseInt(xy[1]);

        // Set the player's starting position in the simulation
        sim.addGoal(x, y);
    }
}

void readObstacles(Simulation sim) :
{}
{
    (
        <OBSTACLE>
        "{"
        {
            // New Lists to store the coordinates and requirements
            List<int[]> coordinates = new ArrayList<int[]>();
            List<String> requirements = new ArrayList<String>();
        }
        <AT>
            <COORDINATE>
            {
                // Parse first coordinate token and add to the list
                String[] xy1 = token.image.replaceAll("[()]", "").split(",");
                coordinates.add(new int[]{ Integer.parseInt(xy1[0]), Integer.parseInt(xy1[1]) });
            }
        (
            "," <COORDINATE>
            {
                // Parse additional coordinates and add to the list
                String[] xy2 = token.image.replaceAll("[()]", "").split(",");
                coordinates.add(new int[]{ Integer.parseInt(xy2[0]), Integer.parseInt(xy2[1]) });
            }
        )*
        <REQUIRES>
                <STRING>
                {
                    // Add first requirement string (remove quotes)
                    String req1 = token.image.replaceAll("\"", "");
                    requirements.add(req1);
                }
                (
                    "," <STRING>
                    {
                        // Add additional requirement strings (remove quotes)
                        String req2 = token.image.replaceAll("\"", "");
                        requirements.add(req2);
                    }
                )*
                "}"
        {
         // Create Obstacle objects
         List<Obstacle> createdObstacles = new ArrayList<Obstacle>();
        for(int[] coord : coordinates)
        {
            Obstacle obs = new Obstacle(coord[0], coord[1], "#", false, false);

            // Add all required items
            for(String r : requirements)
            {
                obs.addRequiredItem(r);
            }

            createdObstacles.add(obs);
        }
        sim.addObstacles(createdObstacles);
        }
    )+
}

void readCollectables(Simulation sim) :
{}
{
    (
        <COLLECTABLE>
        <STRING>
        {
            // Get the item name (remove quotes)
            String itemName = token.image.replaceAll("\"", "");
        }
        "{"
        {
            // New Lists to store the coordinates and message
            List<int[]> coordinates = new ArrayList<int[]>();
            String message = "";
        }
        <AT>
            <COORDINATE>
            {
                // Parse first coordinate token and add to the list
                String[] xy1 = token.image.replaceAll("[()]", "").split(",");
                coordinates.add(new int[]{ Integer.parseInt(xy1[0]), Integer.parseInt(xy1[1]) });
            }
        (
            "," <COORDINATE>
            {
                // Parse additional coordinates and add to the list
                String[] xy2 = token.image.replaceAll("[()]", "").split(",");
                coordinates.add(new int[]{ Integer.parseInt(xy2[0]), Integer.parseInt(xy2[1]) });
            }
        )*
        <MESSAGE> <STRING>
        {
            // Get the message string (remove quotes)
            message = token.image.replaceAll("\"", "");
        }
        "}"
        {
         // Create Collectable objects
         List<Collectable> createdCollectables = new ArrayList<Collectable>();
        for(int[] coord : coordinates)
        {
            // Use item name as both name and icon, or you could modify this as needed
            Collectable coll = new Collectable(itemName, coord[0], coord[1], message, true, "I");
            createdCollectables.add(coll);
        }
        sim.addCollectables(createdCollectables);
        }
    )+
}


void readPlugin(Loader loader) :
{}
{
    <PLUGIN>
    <IDENTIFIER>
    {
        loader.loadPlugin(token.image);
    }
}
